chore: route loader functionality and logger

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -8,17 +8,15 @@ http {
     #include mime.types;
 
     lua_code_cache off; #comment for production
-    lua_package_path '/libs/?.lua;/app/?.lua;;';
-
-    init_by_lua_block {
-        --json = require('dkjson');
-    }
+    lua_package_path '/libs/?.lua;/app/?.lua;/app/lib/?.lua;;';
 
    server {
       listen 80;
 
       location / {
          content_by_lua_file /app/index.lua;
+
+         log_by_lua_file /app/log.lua;
       }
 
       location /favicon.ico {
